refactor: transactional 추가